--- a/README.Rmd
+++ b/README.Rmd
@@ -54,13 +54,13 @@ The package opens the approach of Knoke et al. (2016) to the community of landsc
 <a name="3. Input und Output">Package structure</a>
 </h3>
 
-This chapter provides a brief overview over the package functions. For detailed information about methodological background, functions, and workflow please refer to Husmann et al. (n.d.) listed in the <a href="#7. Suggested">suggested citation</a> section. We also refer the reader to the respective help pages of the package for more information.
+This chapter provides a brief overview over the package functions (Fig. 1). For detailed information about methodological background, functions, and workflow please refer to Husmann et al. (n.d.) listed in the <a href="#7. Suggested">suggested citation</a> section. We also refer the reader to the respective help pages of the package for more information.
 *CP: Der letzte Satz kommt etwas unvermittelt. Meint ihr hier: The package requires the lpSolveApi function of the lpSolveApi package oder so in der Art? "comes from" ist n.m.E. genglisch*
 *VVG: Habe es hier gelöscht und einfach in Zeile 95 verfrachtet. Da wo wir bei coefObjective beschreiben, dass lpSolve genutzt wird.*
 
 
 <p align="center">
-  <img width="781.6" height="452" src="./man/figures/flowchart.png">
+<img width="781.6" height="452" src="./man/figures/flowchart.png">
 </p>
 *Figure 1: Overview of the functions of the* ***optimLanduse*** *package. Green diamonds: input and output data; blue rectangles: functions; gray parallelograms: optional function settings.*
 
@@ -68,12 +68,13 @@ This chapter provides a brief overview over the package functions. For detailed 
 
 The *initScenario()* function combines the user settings with the data into an *optimLanduse*-object ready for solving. The following input data are required:
 
--   *coefTable*: The package is only capable of processing a long-oriented type of data structure. All combinations of land-cover (landUse) alternatives and indicators have to be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction of the respective land-cover and indicator combination. The column names of the table must follow the expected nomenclature displayed below. You also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. All further columns will be dropped if passed.
+-   *coefTable*: The package is only capable of processing a long-oriented type of data structure (Table 1). All combinations of land-cover (landUse) alternatives and indicators have to be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction of the respective land-cover and indicator combination. The column names of the table must follow the expected nomenclature displayed below. You also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. All further columns will be dropped if passed.
 
-<p align="center">
-  <img width="673.4" height="298.2" src="./man/figures/exampleGraphic.png">
-</p>
 *Table 1: Example of the data set from Gosling et al. (2020) to illustrate the required data structure.*
+<p align="center">
+<img width="673.4" height="298.2" src="./man/figures/exampleGraphic.png">
+</p>
+
 
 \| See the help files of the *exampleData()* and *initScenario()* functions for more details. An empty template (incl. predefined headings) \| can be accessed via the *exampleData("exampleEmpty.xlsx")* function. <br>
 
@@ -106,17 +107,17 @@ This is followed by a summary of the results of the optimization:
 
 #### Post-Processing
 
--   *calcPerfomance()*: Attaches the portfolio performances of all indicators and scenarios as data frame. The data can be used for straightforward visualization of the performance. The performance is defined as the distance to the maximum achievable level for each indicator and uncertainty scenario.
+-   *calcPerfomance()*: Attaches the portfolio performances of all indicators and scenarios as data frame. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the distance to the maximum achievable level for each indicator and uncertainty scenario.
 
 <h3>
 <a name="5. Beispielhafte Anwendung">Example application</a>
 </h3>
 
-We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is accessible in the *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the optimLanduse package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the expected *optimLanduse* format, such that it can be used without any data processing.
+We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is accessible in the *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the **optimLanduse** package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the expected *optimLanduse* format, such that it can be used without any data processing.
 
 Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning of farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the optimization model presented here to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmers' goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in tables 1 and 2 in Gosling et al. (2020).
 
-### Installing *optimLanduse*, Loading Required Packages and Importing the Data
+### Installing **optimLanduse**, Loading Required Packages and Importing the Data
 
 ```{r, results='hide',message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
 # If not already installed
@@ -149,10 +150,10 @@ init <- initScenario(coefTable = dat,
                      optimisticRule = "expectation", 
                      # optimistic contribution of each indicator directly defined by their average 
                      fixDistance = NA) 
-                     # 3 is the default
+# 3 is the default
 ```
 
-In line with Gosling et al., we chose the expected value of the indicator as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see equations 4 and 9 in Husmann et al. (n.d.) for more details).
+In line with Gosling et al. (2020), we chose the expected value of the indicator as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see equations 4 and 9 in Husmann et al. (n.d.) for more details).
 
 ### Solving the Initialized *optimLanduse* Object
 
@@ -177,11 +178,11 @@ result$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1 : 6) 
   guides(fill=guide_legend(title = ""))
 ```
 
-*Figure 2: Composition of the optimized farm (based on data shown in Table 1), including all indicators. Each land-cover option is shown in an allocated share (%).*
+*Figure 2: Composition of the optimized farm (based on data of Gosling et al. (2020)), including all indicators. Each land-cover option is shown in an allocated share (%).*
 
 <!-- <p style="text-align: center;"> </p>  -->
 
-The resulting optimized farm composition corresponds to figure 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best fulfills all 10 indicators (i.e. the multi-functional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020) this reveals the potential of agroforestry to serve as a compromise solution to fulfill multiple ecological and economic functions. Yet, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14 %). This reveals that not all of the selected objectives (and their weights) currently drive land-use decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-use composition and the effects of uncertainty. 
+The resulting optimized farm composition (Fig. 2) corresponds to figure 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best fulfills all 10 indicators (i.e. the multi-functional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020) this reveals the potential of agroforestry to serve as a compromise solution to fulfill multiple ecological and economic functions. Yet, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14 %). This reveals that not all of the selected objectives (and their weights) currently drive land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty. 
 
 ### Calculating the Portfolio Performances of the Optimized *optimLanduse* Object
 
@@ -200,7 +201,7 @@ ggplot(performance$scenarioTable,
                min(performance$scenarioTable$performance),
              linetype = "dashed", color = "red") +
   guides(color = guide_legend(title = "",
-                            nrow = 10)) +
+                              nrow = 10)) +
   theme_classic() + 
   theme(text = element_text(size = 18),
         legend.position="right",
@@ -220,21 +221,31 @@ ggplot(performance$scenarioTable,
 
 *CP: Im Folgenden Absatz ist nicht ganz klar auf was Ihr Euch da bezieht. Ich denke ich würde für alle Grafiken eine Figure caption einfügen, das macht es für den Leser deutlich leichter und Ihr könnt dann besser darauf verweisen.*
 
-Looking at the performances of this multi-functional farm reveals, which indicators restrict the result (*CP: Wirklich restrict the result oder drive the largest distance (beta...) under specific uncertainty scenarios. Es stimmt natürlich, aber hier vielleicht noch technischer und mit mehr Bezug zur Formel arbeiten, das macht es denke ich leichter für den Leser*). Here, the indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) show the largest beta values for the most pessimistic uncertainty scenarios *CP: closest to each other in terms of what?*. It can be concluded that the portfolio is apparently restricted by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distance of $\beta$ across all indicators. In other words, the guaranteed performance $1-\beta$ (lowestPerformance) is defined by one the these indicators. (*Die Sätze hier sind ein bisschen wiederholend, vielleicht nochmal straffen, aber im Zweifel lieber doppelt drin lassen, ist ja ein readme und hat keine Beschränkung*) These 3 indicators should therefore be carefully considered when discussing future land-use alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior, since the need for short-term liquidity mainly drives decisions of smallholder farmers in the study region. Intermediate-term economic success is not relevant until consumption of the household is secured. 
+Looking at the performances (Fig. 3) of this multi-functional farm reveals, which indicators restrict the result (*CP: Wirklich restrict the result oder drive the largest distance (beta...) under specific uncertainty scenarios. Es stimmt natürlich, aber hier vielleicht noch technischer und mit mehr Bezug zur Formel arbeiten, das macht es denke ich leichter für den Leser*). Here, the indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) show the largest beta values for the most pessimistic uncertainty scenarios *CP: closest to each other in terms of what?*. It can be concluded that the portfolio is apparently restricted by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distance of $\beta$ across all indicators. In other words, the guaranteed performance $1-\beta$ (lowestPerformance) is defined by one the these indicators. (*Die Sätze hier sind ein bisschen wiederholend, vielleicht nochmal straffen, aber im Zweifel lieber doppelt drin lassen, ist ja ein readme und hat keine Beschränkung*) These 3 indicators should therefore be carefully considered when discussing future land-cover alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior, since the need for short-term liquidity mainly drives decisions of smallholder farmers in the study region. Intermediate-term economic success is not relevant until consumption of the household is secured. 
 
 While the performances of indicator 1 differ relatively strong among the scenarios, the indicators 3 and 8 are similar in each scenario. It thus may be interesting to investigate the reasons for this particular worst-performing scenario of indicator 1.
-*CP: Hab nicht ganz verstanden was Euch hier wichtig ist, vielleicht eine alternative Formulierung: Fig. xy can be used to further explore the effects of uncertainty on the modelled land-use decisions. Indicator 1 shows a larger deviation in indicator performance pij (oder wie ihr es nennt) between uncertainty scenarios. This might be in parts be attributed to the larger standard errors of this indicator. In contrast, Indicators 3 and 8 still show a low guaranteed performance level, while differences between uncertainty scenarios are less prominent. ... oder so irgendwie Such in-depth analyses help to identify trade-offs among different indicators and their likely effects on land-use decisions.....Soll hier nochmal gesagt werden wann die Grafik gemacht werden sollte und wann nicht? Vielleicht auch nicht unbedingt notwendig? *
+*CP: Hab nicht ganz verstanden was Euch hier wichtig ist, vielleicht eine alternative Formulierung: Fig. xy can be used to further explore the effects of uncertainty on the modelled land-use decisions. Indicator 1 shows a larger deviation in indicator performance pij (oder wie ihr es nennt) between uncertainty scenarios. This might be in parts be attributed to the larger standard errors of this indicator. In contrast, Indicators 3 and 8 still show a low guaranteed performance level, while differences between uncertainty scenarios are less prominent. ... oder so irgendwie: Such in-depth analyses help to identify trade-offs among different indicators and their likely effects on land-use decisions.....Soll hier nochmal gesagt werden wann die Grafik gemacht werden sollte und wann nicht? Vielleicht auch nicht unbedingt notwendig? *
 
-```{r, message=FALSE, warning=FALSE, fig.height = 5, fig.width = 10}
+```{r, message=FALSE, warning=FALSE}
 performance$beta
+```
+
+```{r, message=FALSE, warning=FALSE, results='hide'}
 lowestPerformance <- performance$scenarioTable[order(performance$scenarioTable$performance,
-                                decreasing = FALSE),]
-performanceExample<- head(lowestPerformance[,c(1 : 8, 31)], n = 9)
+                                                     decreasing = FALSE),]
+performanceExample <- head(lowestPerformance[,c(1 : 8, 31)], n = 9)
 
 knitr::kable(performanceExample, row.names = F)
 ```
 
-Further elaborating the packages' results indeed reveals that indicator 1 (financial stability) restricts the optimum and that the worst performing scenarios of indicator 3 (investment costs) are equal to the worst performing scenarios of indicator 1. $1-\beta$ results to this worst performances. *CP: Letzten Satz verstehe ich nicht ganz. Kann der Satz weg?* All of the worst performing scenarios have in common that the outcome of silvopasture is pessimistic (Low) and the outcome of forest is optimistic (High). This relationship thus might be of interest when developing strategies or policies for a desired landscape development.
+*Table 2: An extract of the performance table of all indicators created through the calcPerformance() function with the worst performing scenarios*
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+knitr::kable(performanceExample, row.names = F)
+```
+
+
+Further elaborating the packages' results (Table 2) indeed reveals that indicator 1 (financial stability) restricts the optimum and that the worst performing scenarios of indicator 3 (investment costs) are equal to the worst performing scenarios of indicator 1. $1-\beta$ results to this worst performances. *CP: Letzten Satz verstehe ich nicht ganz. Kann der Satz weg?* All of the worst performing scenarios have in common that the outcome of silvopasture is pessimistic (Low) and the outcome of forest is optimistic (High). This relationship thus might be of interest when developing strategies or policies for a desired landscape development.
 *CP: Hm, verstehe ich auch nicht ganz. Kann der ganze Absatz vielleicht einfach weg?*
 *Nachdem ich die Tabelle gesehen habe verstehe ich glaube was Ihr meint. Allerdings bin ich mir nicht so sicher ob man da so in der Tiefe eingeht, wenn man keine Erklärung hat? oder ihr müsstet die noch ergänzen. sivlopasture ist eben der Indikator der am besten abschneidet und in der aktuellen Zusammensetzung den höchsten Anteil hat. Ich denke ich würde eher den Code kommentieren. Also z.B. sowas wie: For further exploring the role of different indicators for modelled land-use decision, it might be helpful to identify the indicators and uncertainty scenarios with the lowest guaranteed performance (...code...). Here, this is the case for the indicators 1 and 3 for the pessimistic scenarios of silvopasture.*
 *Interessant ist in diesem Zusammenhang ja auch das optimierte gegenüber der heutigen Landnutzung zu vergleichen, welcher Indikator dann z.B. eine deutlich schlechtere Min performance hätte - das ist aber natürlich im package nicht ganz so leicht auszurechnen*
@@ -258,7 +269,7 @@ applyFun <- function(x) {
 
 applyDf <- cbind(applyDf,
                  t(apply(applyDf, 1, applyFun)))
-                 
+
 names(applyDf) <- c("u", "beta", names(result$landUse))
 
 applyDf[, c(3 : 8)] <- applyDf[, c(3 : 8)] * 100
@@ -277,24 +288,32 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
         legend.position = "bottom")
 ```
 
-Solving the portfolio under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the standard error of the mean (Gosling et al. use the s.e.m.; any other uncertainty measure is also possible) of the indicator consequences on the land-cover options. 
+*Figure 4: Theoretically ideal farm compositions under increasing levels of uncertainty.*
+
+
+Solving the portfolio (Fig. 4) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the standard error of the mean (Gosling et al. use the s.e.m.; any other uncertainty measure is also possible) of the indicator consequences on the land-cover options. 
 *CP: STreng genommen verändert sich der STandardfehler ja nicht. Vielleicht lieber sowas wie ... The higher the uncertainty level the larger the uncertainty space, defined by the multiple of the standard error or stand deviation of the expected (mean) indicator value*.
 
-Here, the composition of land-cover alternatives is quite stable across different uncertainty levels. Only the small proportion of crops (circa 10 % *CP:Genau angeben*) is interchanged with small proportions of pasture and plantation under uncertainty levels larger than 2. The share of forest and silvopasture is hardly affected by the uncertainty level. Alley cropping does not appear in this portfolio at any uncertainty level. This is due to the fact that it is not defined as the best land-cover type in any indicator and is also the land-cover type that has the highest management complexity. The plot corresponds to figure 3 in Gosling et al. (2020).
+Here, the composition of land-cover alternatives is quite stable across different uncertainty levels (Fig. 4). Comparing portfolios of u-value 0 with u-value 3, the share of forest decreases from 41.2% to 34.3%, silvopasture from 45.9% to 44.9%, and the share of crops from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%. 
+
+*VVG: Habe hier im Absatz drüber mal genau die prozente angegeben, da Carola im vorherigen Absatz (direkt hier drunter) "Genau angeben" angemrkt hatte um von dem circa wegzukommen. Es viel mir jedoch schwer das ganze genau anzugeben ohne mehrere Landnutzungsformen aufzuzählen. Vielleicht aber zu genau.*
+*Only the small proportion of crops (circa 10 %* ***CP:Genau angeben****) is interchanged with small proportions of pasture and plantation under uncertainty levels larger than 2. The share of forest and silvopasture is hardly affected by the uncertainty level.* 
+
+Alley cropping does not appear in this portfolio at any uncertainty level. This is due to the fact that it is not defined as the best land-cover type in any indicator and is also the land-cover type that has the highest management complexity. The plot corresponds to Figure 3 in Gosling et al. (2020).
 
 ### Leave-Indicators-Out-Analysis to Investigate the Indicators' Sensitivity
 *Soll es bei "leave-indicators-out-analysis" bleiben oder ginge auch etwas wie .. selection of specific indicator (bundles) oder "in and exclusion of indicators"*
 
-The sensitivity of the portfolio towards indicators or groups of indicators can be analysed by either excluding indicators of interest and interpreting the response of the resulting land-use composition or, alternatively, by adding indicators of interest. To do so individual and independent optimization runs are carried out in and excluding different (sets of) indicators. The following code exemplifies such optimization runs for 3 relevant subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) also provides functionality to straightforwardly leave-indicators-out by a single click. The here presented example can also be loaded into the app. Further explanation and instructions are given in the app.
+The sensitivity of the portfolio towards indicators or groups of indicators can be analysed by either excluding indicators of interest and interpreting the response of the resulting land-cover composition or, alternatively, by adding indicators of interest. To do so individual and independent optimization runs are carried out in and excluding different (sets of) indicators. The following code exemplifies such optimization runs for 3 relevant subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) also provides functionality to straightforwardly leave-indicators-out by a single click. The here presented example can also be loaded into the app. Further explanation and instructions are given in the app.
 
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_socioeconomic <- dat[dat$indicator != "Protecting soil resources" & dat$indicator !="Protecting water supply",]
 
 init_socioeconomic <- initScenario(dat_socioeconomic,
-                     uValue = 2,
-                     optimisticRule = "expectation", 
-                     fixDistance = NA) 
+                                   uValue = 2,
+                                   optimisticRule = "expectation", 
+                                   fixDistance = NA) 
 
 result_socioeconomic <- solveScenario(x = init_socioeconomic)
 
@@ -314,7 +333,9 @@ result_socioeconomic$landUse %>% gather(key = landCoverOption, value = landCover
   guides(fill=guide_legend(title=""))
 ```
 
-The first leave-indicator-out example considers socio-economic indicators only (see also figure 5 of Gosling et al. (2020)). This corresponds to the above shown multi-functional portfolio, as all indicators relevant for the solution of the multi-functional portfolio are captured also in the socio-economic group.
+*Figure 5: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only socio-economic indicators. Each land-cover option is shown in an allocated share (%).*
+
+The first leave-indicator-out example considers socio-economic indicators only (Fig. 5; see also Figure 5 of Gosling et al. (2020)). This corresponds to the above shown multi-functional portfolio, as all indicators relevant for the solution of the multi-functional portfolio are captured also in the socio-economic group.
 
 ```{r}
 performance_socioeconomic <- calcPerformance(result_socioeconomic)
@@ -323,23 +344,34 @@ performance_socioeconomic$scenarioTable$performance <-
   performance_socioeconomic$scenarioTable$performance * 100
 
 performance_socioeconomic$beta
+```
+
+```{r, results='hide'}
 lowestPerformance_socioeconomic <- performance_socioeconomic$scenarioTable[
   order(performance_socioeconomic$scenarioTable$performance,
         decreasing = FALSE),]
 
-head(lowestPerformance_socioeconomic[,c(1 : 8, 31)], n = 9)
+performanceExample_socioeconomic <- head(lowestPerformance_socioeconomic[,c(1 : 8, 31)], n = 9)
+
+knitr::kable(performanceExample_socioeconomic, row.names = F)
 ```
 
-Summarizing the relevant performances reveals that the result is still limited by financial stability and investment costs. Accordingly, also this socio-economic portfolio still does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the farmers (*CP: Or altnertave weighings are likely...*).
+*Table 3: An extract of the performance table of only socio-economic indicators created through the calcPerformance() function with the worst performing scenarios*
+
+```{r, echo=FALSE}
+knitr::kable(performanceExample_socioeconomic, row.names = F)
+```
+
+Summarizing the relevant performances (Table 3) reveals that the result is still limited by financial stability and investment costs. Accordingly, also this socio-economic portfolio still does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the farmers (*CP: Or altnertave weighings are likely...*).
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_ecologic <- dat[dat$indicator %in% c("Protecting soil resources",
                                          "Protecting water supply"),]
 
 init_ecologic <- initScenario(dat_ecologic,
-                     uValue = 2,
-                     optimisticRule = "expectation", 
-                     fixDistance = NA) 
+                              uValue = 2,
+                              optimisticRule = "expectation", 
+                              fixDistance = NA) 
 
 result_ecologic <- solveScenario(x = init_ecologic)
 
@@ -359,7 +391,9 @@ result_ecologic$landUse %>% gather(key = landCoverOption, value = landCoverShare
   guides(fill=guide_legend(title=""))
 ```
 
-The ecological indicator group, as the second example for leave-indicators-out analysis, leads to a land-use portfolio comprising forests only (corresponds to figure 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than that of forests. This portfolio differs even more from the actually observed portfolio *differs in what?* then the above shown multi-functional portfolio. Also the ecological indicators are therefore apparently not sufficient to approximate the farmers' inceptions (*CP: perceptions?*.
+*Figure 6: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only ecologic indicators. Each land-cover option is shown in an allocated share (%).*
+
+The ecological indicator group, as the second example for leave-indicators-out analysis, leads to a land-cover portfolio comprising forests only (Fig.6; corresponds to figure 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than that of forests. This portfolio differs even more from the actually observed portfolio *differs in what?* then the above shown multi-functional portfolio. Also the ecological indicators are therefore apparently not sufficient to approximate the farmers' perceptions.
 
 ### Immediate  Economic Success
 
@@ -369,9 +403,9 @@ dat_short <- dat[dat$indicator %in% c("Meeting household needs",
                                       "Liquidity"),]
 
 init_short<- initScenario(dat_short,
-                     uValue = 2,
-                     optimisticRule = "expectation", 
-                     fixDistance = NA) 
+                          uValue = 2,
+                          optimisticRule = "expectation", 
+                          fixDistance = NA) 
 
 result_short <- solveScenario(x = init_short)
 
@@ -391,7 +425,9 @@ result_short$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1
   guides(fill = guide_legend(title = ""))
 ```
 
-The third example considers the prospective relevant indicators of the farmers only. Corresponding to figure 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate the immediate economic success. Indeed, this portfolio best reflects the portfolio observed in Eastern Panama. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multi-functional portfolio highlight the requirements a land-cover alternative must fulfill to meet the farmers needs and goals. The silvopasture as defined in Gosling et al. (2020) may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the realistic scenario. Policies or development plans may consider these indicators as key elements when promoting a landscape development towards multifunctional landscapes.
+*Figure 7: Composition of the optimized farm (based on data of Gosling et al. (2020)), including the prospective relevant indicators of the farmers only. Each land-cover option is shown in an allocated share (%).*
+
+The third example considers the prospective relevant indicators of the farmers only (Fig. 7). Corresponding to figure 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate the immediate economic success. Indeed, this portfolio best reflects the portfolio observed in Eastern Panama. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multi-functional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' needs and goals. The silvopasture as defined in Gosling et al. (2020) may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the realistic scenario. Policies or development plans may consider these indicators as key elements when promoting a landscape development towards multifunctional landscapes.
 
 ### The use of fixDistance
 
@@ -414,7 +450,7 @@ applyFun <- function(x) {
 
 applyDf <- cbind(applyDf,
                  t(apply(applyDf, 1, applyFun)))
-                 
+
 names(applyDf) <- c("u", "beta", names(result$landUse))
 
 applyDf[, c(3 : 8)] <- applyDf[, c(3 : 8)] * 100
@@ -433,16 +469,17 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
         legend.position = "bottom")
 ```
 
-*CP: Hier ist auch was komisch*
-It can be seen that the land-cover allocation transition under raising uncertainty differs slightly from the multi-functional scenario shown above. The here broadened state space leads an earlier increase of pasture (*CP: Ist hier gemeint: leads to selection of a larger share of pasture under low uncertainty levels as compared to...*).
+*Figure 8: Theoretically ideal farm compositions using the fixDistance argument and increasing levels of uncertainty.*
 
+*CP: Hier ist auch was komisch*
+It can be seen that the land-cover allocation transition under raising uncertainty (Fig. 8) differs slightly from the multifunctional scenario shown above (Fig. 4). The here broadened state space leads an earlier increase of pasture (*CP: Ist hier gemeint: leads to selection of a larger share of pasture under low uncertainty levels as compared to...*).
 
 
 <h3>
 <a name="7. Suggested">Suggested citation </a>
 </h3>
 
-Husmann, K., von Groß, V., Fuchs J.M., Bödeker, K. (2022): optimLanduse: Robust Land-Use Optimization. R package version 1.0.0. <https://CRAN.R-project.org/package=optimLanduse>.
+Husmann, K., von Groß, V., Fuchs J.M., Bödeker, K. (2022): optimLanduse: Robust Land-Use Optimization. R package version 1.1.0. <https://CRAN.R-project.org/package=optimLanduse>.
 
 <h3>
 <a name="8. Literatur">Literature</a>
